// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorDefinition snapshot w/o initial values 1`] = `
<form
  className="pf-c-form pf-m-horizontal"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    data-testid="editor-definition-field"
  >
    <button
      onClick={[Function]}
    >
      Editor Definition Change
    </button>
    Editor Definition Field
  </div>
  <div
    data-testid="editor-image-field"
  >
    <button
      onClick={[Function]}
    >
      Editor Image Change
    </button>
    Editor Definition Field
  </div>
  <div
    className="pf-l-flex"
  >
    <div
      className="pf-m-align-right"
    >
      <a
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-link pf-m-inline"
        data-ouia-component-id="OUIA-Generated-Button-link-1"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={null}
        href="https://eclipse.dev/che/docs/stable/end-user-guide/defining-a-common-ide/"
        role={null}
        target="_blank"
        type={null}
      >
        How to specify and use a custom editor
      </a>
    </div>
  </div>
</form>
`;

exports[`EditorDefinition snapshot with initial values 1`] = `
<form
  className="pf-c-form pf-m-horizontal"
  noValidate={true}
  onSubmit={[Function]}
>
  <div
    data-testid="editor-definition-field"
  >
    <button
      onClick={[Function]}
    >
      Editor Definition Change
    </button>
    Editor Definition Field
  </div>
  <div
    data-testid="editor-image-field"
  >
    <button
      onClick={[Function]}
    >
      Editor Image Change
    </button>
    Editor Definition Field
  </div>
  <div
    className="pf-l-flex"
  >
    <div
      className="pf-m-align-right"
    >
      <a
        aria-disabled={false}
        aria-label={null}
        className="pf-c-button pf-m-link pf-m-inline"
        data-ouia-component-id="OUIA-Generated-Button-link-2"
        data-ouia-component-type="PF4/Button"
        data-ouia-safe={true}
        disabled={null}
        href="https://eclipse.dev/che/docs/stable/end-user-guide/defining-a-common-ide/"
        role={null}
        target="_blank"
        type={null}
      >
        How to specify and use a custom editor
      </a>
    </div>
  </div>
</form>
`;
